docs/site/assets/css/docs.scss
/* ... */
.docs pre code {
    font-family: 'Source Code Pro', monospace;
    padding: 0;
    font-size: 100%;
    background: transparent;
    white-space: pre;
    border-radius: 0;
}

.docs .details {
    margin-bottom: 10px;
}

.docs .details .details__summary {
    margin-left: 0px;
}

.docs .details .details__summary::before {
    content: '';
    display: inline-block;
    width: 10px;
    height: 10px;
    background: url('../../images/icons/dropdown.svg');
    background-repeat: no-repeat;
    background-size: contain;
    transform: rotate(-90deg);
    margin-right: 5px;
}

.docs .details.active .details__summary::before {
    transform: rotate(0deg);
}

.docs .details .details__content {
    display: none;
}

.docs .details.active .details__content {
    display: block;
}

.docs blockquote {
    margin: 20px 0;
    padding: 5px 20px;
    border-left: 4px solid #0066FF;

    @include breakpoints.max-w(xl) {
      padding: 0 10px;
    }

    @include breakpoints.max-w(xs) {
      border-left: 2px solid #0066FF;
    }
}

.docs .anchorjs-link:hover {
    text-decoration: none;
}

.docs {
    .table-wrapper {
        position: relative;
        overflow: auto;
        margin-bottom: 30px;

        &.table-wrapper__small,
        &.table-wrapper__versions {
            overflow: visible;
        }

        .table__small {
          box-shadow: none;
        }
    }
}

.docs table .tippy-content table {
    background-color: variables.$background-blue;
    text-align: left;
    color: #5E6697;
    font-size: 0.8750em;
    font-weight: 700;
    line-height: 1.5em;
    letter-spacing: 0.3px;
    font-style: normal;
    font-stretch: normal;
}

.docs .tippy-content ul li {
    color: #00122c;
}

.docs table {
    width: 100%;
    border-spacing: 0;
    border: none;
    border-collapse: collapse;
    font-size: 16px;
}

.docs {
    table {
        th, td {
            padding: 1em 1.5em;
            border-bottom: 1px solid #C4CAD4;
        }

        &.supported_versions,
        &.table-wrapper__shadow {
            th {
                padding: 1em;
            }
        }
    }

    .table-wrapper__small {
        table {
            th, td {
                padding: 1em 1.2em;

                @include breakpoints.max-w(s) {
                    padding: 12px;
                }
            }
        }
    }
}

.docs table tr:last-child td {
    border-bottom: none;
}

.docs table tr.highlight-default {
    background: #dfebff;
}

.docs table thead {
  background: variables.$background-blue;
}

.docs table thead tr th {
    text-align: left;
    color: variables.$color-text-secondary;
    font-size: 0.8750em;
    font-weight: 700;
    line-height: 1.5em;
    letter-spacing: 0.3px;
    font-style: normal;
    font-stretch: normal;
}

.docs table thead tr th:first-child {
    border-top-left-radius: 4px;
}

.docs table thead tr th:last-child {
    border-top-right-radius: 4px;
}

.docs table thead tr th a {
    color: currentColor;
    text-decoration: underline;
}

.docs table tbody tr td {
    text-align: left;
    font-size: 0.875em;
    line-height: 1.5em;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: -0.3px;
}

.docs table.versioning-table {
  table-layout: fixed;

  th, td {
    word-wrap: break-word;
  }

  th {
    background: variables.$background-blue;
    font-weight: bold;
    text-align: center;
    vertical-align: middle;
    font-size: 0.8125em;
  }

  tbody tr td {
    font-size: 0.8125em;
    text-align: center;
    vertical-align: top;
    line-height: 16px;

    &:first-child {
      text-align: start;
    }
  }

  tbody tr td strong {
    font-size: 1.167em;
  }

  tbody tr td i {
    font-size: 0.75em;
  }

  .header-row {
    background-color: #e0e0e0;
    font-weight: bold;
  }

  .header-row th {
    &:first-child {
      text-align: start;
    }

    &:last-child {
      border: none;
      text-align: center;
    }
  }

  .sub-header {
    background-color: #f9f9f9;
  }

  .sub-header th {
    position: relative;
    text-align: center;
  }

  .sub-header th {
    &::before {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      display: block;
      width: 100%;
      height: 1px;
      background: #C4CAD4;
    }

    &::after {
      content: '';
      position: absolute;
      top: 0;
      left: 50%;
      display: block;
      width: 1px;
      height: 4px;
      background: #C4CAD4;
    }
  }

  .sub-header th {
    :first-child::before {
      left: 50%;
    }

    &:last-child::before {
      right: 50%;
      left: auto;
    }

    &.middle::after {
      top: -4px;
      height: 8px;
    }
  }
}

.docs img {
    max-width: 100%;
}

.docs .clickable-header {
    cursor: pointer;
}

.docs a.anchorjs-link {
    font-family: anchorjs-icons;
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    line-height: 1;
    padding-left: 0.375em;

    &::after {
      display: inline-block;
    }
}

.docs .btn {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: auto;
    height: 28px;
    padding: 0 15px;
    border-radius: 10px;
    text-decoration: none !important;
    font-size: 14px;
    line-height: 24px;
    font-weight: 600;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: normal;
    box-sizing: border-box;
}

.docs .btn_o {
  box-sizing: border-box;
  border: 2px solid rgba(0, 102, 255, 0.1);
  color: #0066ff;
}

.docs .btn_o:hover {
  border: 2px solid rgba(0, 102, 255, 0.5);
}

.docs .btn-group {
  display: flex;
  flex-direction: row;
}

.docs .btn-group>*:not(:last-child) {
  margin-right: 10px;
}

.docs .btn__icon {
  display: inline-block;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: contain;
  width: 16px;
  height: 16px;
  position: relative;
  top: -1px;
  margin-right: 7px;
}
/* ... */

